tabbar: first-visible[-unpinned]-tab is no longer available
The attribute `first-visible[-unpinned]-tab` is no longer available in
latest firefox, as a result, some of the css settings no longer work as
we would expect. This commit removes such references, but use
`:first-child` to identify the first tab where we would like to set
margin-inline-start.

--- a/chrome/findbar/findbar.css
+++ b/chrome/findbar/findbar.css
@@ -41,7 +41,7 @@ hbox[anonid="findbar-textbox-wrapper"]:focus-within
 	border: 2px solid -moz-accent-color !important;
 	margin: -1px !important;
 	padding: 1px !important;
-	height: 30px !important;
+	height: 28px !important;
 }
 
 hbox[anonid="findbar-textbox-wrapper"] toolbarbutton
